--- a/ApiTest/static/css/search.css
+++ b/ApiTest/static/css/search.css
@@ -39,7 +39,7 @@ html, body {
 body {
     padding: 0px;
     margin: 0px;
-    background: linear-gradient(rgba(1, 1, 1, 0.05), rgba(16, 16, 16, 0.05)),url(./../../static/images/banner2.jpg);
+    background: linear-gradient(rgba(1, 1, 1, 0.05), rgba(16, 16, 16, 0.05)), url(./../../static/images/souye.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -51,7 +51,7 @@ body {
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    top: 50%;
+    top: 30%;
     left: 50%;
 }
 
@@ -257,3 +257,185 @@ body {
     }
 }
 
+
+/*底部动画*/
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Bubblegum+Sans&display=swap");
+
+p {
+    margin: 0 9em;
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.landIn {
+    /*display: flex;*/
+    flex-wrap: wrap;
+    line-height: 1.8;
+    color: white;
+    font-family: Lora, serif;
+    white-space: pre;
+}
+
+.landIn span {
+    animation: landIn 0.8s ease-out both;
+}
+
+@keyframes landIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.bubbling {
+    position: relative;
+    z-index: 2;
+    display: inline-block;
+    color: black;
+    font-size: 2.5rem;
+    font-family: 'Bubblegum Sans', cursive;
+    text-transform: uppercase;
+}
+
+.bubble {
+    position: absolute;
+    background: white;
+    border-radius: 100%;
+}
+
+/*{#shizhong#}*/
+.clock {
+    display: -webkit-box;
+    display: flex;
+    position: fixed;
+    top: 8px;
+    right: 10px;
+}
+
+.clock .divider {
+    font-size: 33px;
+    line-height: 51px;
+    font-style: normal;
+}
+
+.clock .flip {
+    position: relative;
+    width: 30px;
+    height: 50px;
+    margin: 2px;
+    font-size: 33px;
+    line-height: 50px;
+    text-align: center;
+    background: #231f20;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(0, 0, 0, 0.4));
+}
+
+.clock .flip .digital::before, .clock .flip .digital::after {
+    position: absolute;
+    content: attr(data-number);
+    left: 0;
+    right: 0;
+    color: white;
+    background: #231f20;
+    overflow: hidden;
+    -webkit-perspective: 160px;
+    perspective: 160px;
+}
+
+.clock .flip .digital::before {
+    top: 0;
+    bottom: 50%;
+    border-bottom: 1px solid #231f20;
+    border-radius: 10px 10px 0 0;
+}
+
+.clock .flip .digital::after {
+    top: 50%;
+    bottom: 0;
+    line-height: 0;
+    border-radius: 0 0 10px 10px;
+}
+
+.clock .flip .back::before,
+.clock .flip .front::after {
+    z-index: 1;
+}
+
+.clock .flip .back::after {
+    z-index: 2;
+}
+
+.clock .flip .front::before {
+    z-index: 3;
+}
+
+.clock .flip .back::after {
+    -webkit-transform-origin: center top;
+    transform-origin: center top;
+    -webkit-transform: rotateX(0.5turn);
+    transform: rotateX(0.5turn);
+}
+
+.clock .flip.running .front::before {
+    -webkit-transform-origin: center bottom;
+    transform-origin: center bottom;
+    -webkit-animation: frontFlipDown 0.6s ease-in-out;
+    animation: frontFlipDown 0.6s ease-in-out;
+    box-shadow: 0 -2px 6px rgba(255, 255, 255, 0.3);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.clock .flip.running .back::after {
+    -webkit-animation: backFlipDown 0.6s ease-in-out;
+    animation: backFlipDown 0.6s ease-in-out;
+}
+
+@-webkit-keyframes frontFlipDown {
+    to {
+        -webkit-transform: rotateX(0.5turn);
+        transform: rotateX(0.5turn);
+    }
+}
+
+@keyframes frontFlipDown {
+    to {
+        -webkit-transform: rotateX(0.5turn);
+        transform: rotateX(0.5turn);
+    }
+}
+
+@-webkit-keyframes backFlipDown {
+    to {
+        -webkit-transform: rotateX(0);
+        transform: rotateX(0);
+    }
+}
+
+@keyframes backFlipDown {
+    to {
+        -webkit-transform: rotateX(0);
+        transform: rotateX(0);
+    }
+}
+
+h1 {
+    position: fixed;
+    left: 30px;
+    width: 80px;
+    padding-left: 0px;
+    text-align: center;
+
+}
+
+.header h1 {
+    padding-right: 30px;
+}
