--- a/ApiTest/templates/apiDetail.html
+++ b/ApiTest/templates/apiDetail.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./../static/images/favicon%202.ico">
 	<link rel="stylesheet" href="./../static/css/layui.css" media="all">
 	<link rel="stylesheet" type="text/css" href="./../static/css/main.css">
-	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./../static/css/bootstrap.min.css">
 
 	<script src="./../static/js/layui2.5.5/layui.js"></script>
     <style>
@@ -25,7 +25,7 @@
         }
 
         .landIn {
-            display: flex;
+            {#display: flex;#}
             flex-wrap: wrap;
             line-height: 1.8;
             color: white;
@@ -55,7 +55,7 @@
             color: black;
             font-size: 2.5rem;
             font-family: 'Bubblegum Sans', cursive;
-        {#font-weight: bold;#} text-transform: uppercase;
+            text-transform: uppercase;
         }
 
         .bubble {
@@ -106,7 +106,7 @@
 	}
 
 	.footer p.copyright {
-		padding: 15px 0 10px 0;
+		padding: 10px 0 10px 0;
 	}
 
 	.footer {
@@ -250,19 +250,12 @@
 	</div>
 </div>
 <div class="footer">
-    <p class="landIn">The automation test platform is convenient for everyone to use、人生苦短，我用Python</p>
-{#	<p class="copyright">#}
-{#		没有什么事情能比找BUG更开心的了<br/>#}
-{#		人生苦短，我用Python#}
-{#	</p>#}
+
+	<p class="copyright">
+        <p class="landIn">人生苦短，我用Python</p>
+	</p>
 </div>
 
-
-<script src="./../static/js/layui/layui.js"></script>
-<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <script>
     // 进入全屏：
