--- a/ApiTest/templates/search.html
+++ b/ApiTest/templates/search.html
@@ -304,19 +304,21 @@
 
 <div class="">
 
-                    <form onsubmit="submitFn(this, event);">
+    <form onsubmit="submitFn(this, event);">
 
-                        <div class="search-wrapper">
-                            <div class="input-holder">
-                                <input type="text" class="search-input" placeholder="请输入接口名称或URL或责任者等等"/>
-                                <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
-                            </div>
+        <div class="search-wrapper">
+            <div class="input-holder">
+                <input type="text" class="search-input" placeholder="请输入接口名称或URL或责任者等等"/>
+                <button class="search-icon" onclick="searchToggle(this, event);"><span></span>
+                    <i style="font-size: 12px;">搜索</i>
+                </button>
+            </div>
 
-                            <span class="close" onclick="searchToggle(this, event);"></span>
+            <span class="close" onclick="searchToggle(this, event);"></span>
 
-                        </div>
-                    </form>
-                </div>
+        </div>
+    </form>
+</div>
 
 
 <div class="footer">
