--- a/ApiTest/templates/search.html
+++ b/ApiTest/templates/search.html
@@ -309,9 +309,7 @@
         <div class="search-wrapper">
             <div class="input-holder">
                 <input type="text" class="search-input" placeholder="请输入接口名称或URL或责任者等等"/>
-                <button class="search-icon" onclick="searchToggle(this, event);"><span></span>
-                    <i style="font-size: 12px;">搜索</i>
-                </button>
+                <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
             </div>
 
             <span class="close" onclick="searchToggle(this, event);"></span>
