--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -659,8 +659,9 @@
         soulTable: 'soulTable'
     });
 
-    layui.use(['table', "soulTable"], function (data) {
+    layui.use(['table', "soulTable",'util'], function (data) {
         var table = layui.table;
+        var util = layui.util;
         soulTable = layui.soulTable;
         //第一个实例
         var layer = layui.layer;
@@ -1081,7 +1082,7 @@
                             let b = JSON.parse(res.result);
                             return '<span style="color: red;">' + JSON.stringify(b["message"]) + '</span>'
                         } else {
-                            return '<span>' + res.result + '</span>'
+                            return '<span>' + util.escape(res.result) + '</span>'
                         }
                     }
                 }
@@ -1701,7 +1702,7 @@
                                         shade: false,
                                         zIndex: layer.zIndex,
                                         maxmin: true, //开启最大化最小化按钮
-                                        area: ['900px', '600px'],
+                                        area: ['950px', '600px'],
                                         content: '/echart_report/',
                                         success: function () {
                                             layer.setTop(layero);
