--- a/ApiTest/static/css/singleApi.css
+++ b/ApiTest/static/css/singleApi.css
@@ -111,3 +111,8 @@
     max-height:300px;
     overflow-y: scroll;
 }
+
+.mybg{
+    /*display: flex;*/
+    background-image:linear-gradient(to left bottom, hsl(79, 100%, 85%) 0%,hsl(220, 100%, 85%) 100%);
+}
