--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -20,7 +20,7 @@
     </style>
 
 </head>
-<body class="layui-layout-body" style="background-color:lightsteelblue;">
+<body class="layui-layout-body">
 <div>
     <!--创建用例-->
     <div class="layui-row" id="add_case" style="display:none;">
@@ -716,7 +716,7 @@
     </div>
 </div>
 <!--主题内容-table-->
-<div id="layuibody" class="layui-body" style="margin-bottom: -70px;">
+<div id="layuibody" class="layui-body mybg" style="margin-bottom: -70px;">
     <div style="padding: 15px;">
         <!--  lay-separator="-"-->
         <div class="demoTable">
