--- a/ApiTest/templates/pyechartReport.html
+++ b/ApiTest/templates/pyechartReport.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="a2c2be19ed184201aaf74b23fdf685e5" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="8a88f57deb0340e48ac974d17f93ef6a" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_a2c2be19ed184201aaf74b23fdf685e5 = echarts.init(
-            document.getElementById('a2c2be19ed184201aaf74b23fdf685e5'), 'white', {renderer: 'canvas'});
-        var option_a2c2be19ed184201aaf74b23fdf685e5 = {
+        var chart_8a88f57deb0340e48ac974d17f93ef6a = echarts.init(
+            document.getElementById('8a88f57deb0340e48ac974d17f93ef6a'), 'white', {renderer: 'canvas'});
+        var option_8a88f57deb0340e48ac974d17f93ef6a = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -51,13 +51,16 @@
             "type": "bar",
             "name": "Duration",
             "data": [
-                13.492,
+                4.84,
+                1.337,
+                0.317,
+                0.166,
+                0.043,
+                0.275,
                 0,
                 0,
                 0,
-                0,
-                0,
-                0
+                13.492
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -122,13 +125,16 @@
                 }
             },
             "data": [
-                "get_department_list",
-                "get_department_folder_by_group_name",
-                "get_department_by_group_name",
-                "create_department",
-                "get_user_list_in_department",
-                "update_department",
-                "delete_department_by_group_name"
+                "get_unit_list",
+                "update_unit",
+                "create_unit",
+                "get_unit_by_id",
+                "delete_unit_by_group_name",
+                "create_data_form_config",
+                "delete_data_form_config",
+                "get_data_form_config_details",
+                "get_data_form_config_list",
+                "get_department_list"
             ]
         }
     ],
@@ -245,7 +251,7 @@
         "zoomLock": false
     }
 };
-        chart_a2c2be19ed184201aaf74b23fdf685e5.setOption(option_a2c2be19ed184201aaf74b23fdf685e5);
+        chart_8a88f57deb0340e48ac974d17f93ef6a.setOption(option_8a88f57deb0340e48ac974d17f93ef6a);
     </script>
 </body>
 </html>
