--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -14,7 +14,7 @@
     <script src="../static/js/layui2.5.5/layui.js"></script>
 </head>
 
-<body class="layui-layout-body" style="background-color:lightsteelblue;">
+<body class="layui-layout-body">
 <!--表单内容-->
 <div>
     <!--创建用例-->
@@ -622,7 +622,7 @@
     </div>
 </div>
 <!--主题内容-->
-<div id="layuibody" class="layui-body" style="margin-bottom: -70px;">
+<div id="layuibody" class="layui-body mybg" style="margin-bottom: -70px;">
     <div style="padding: 15px;">
         <!--  lay-separator="-"-->
         <div class="demoTable">
