--- a/ApiTest/templates/pyechartReport.html
+++ b/ApiTest/templates/pyechartReport.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="8a88f57deb0340e48ac974d17f93ef6a" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="73a7d70bbc3c484e8bc1508fc614e6dd" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_8a88f57deb0340e48ac974d17f93ef6a = echarts.init(
-            document.getElementById('8a88f57deb0340e48ac974d17f93ef6a'), 'white', {renderer: 'canvas'});
-        var option_8a88f57deb0340e48ac974d17f93ef6a = {
+        var chart_73a7d70bbc3c484e8bc1508fc614e6dd = echarts.init(
+            document.getElementById('73a7d70bbc3c484e8bc1508fc614e6dd'), 'white', {renderer: 'canvas'});
+        var option_73a7d70bbc3c484e8bc1508fc614e6dd = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -51,16 +51,11 @@
             "type": "bar",
             "name": "Duration",
             "data": [
-                4.84,
+                75.276,
                 1.337,
                 0.317,
                 0.166,
-                0.043,
-                0.275,
-                0,
-                0,
-                0,
-                13.492
+                0.043
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -129,12 +124,7 @@
                 "update_unit",
                 "create_unit",
                 "get_unit_by_id",
-                "delete_unit_by_group_name",
-                "create_data_form_config",
-                "delete_data_form_config",
-                "get_data_form_config_details",
-                "get_data_form_config_list",
-                "get_department_list"
+                "delete_unit_by_group_name"
             ]
         }
     ],
@@ -251,7 +241,7 @@
         "zoomLock": false
     }
 };
-        chart_8a88f57deb0340e48ac974d17f93ef6a.setOption(option_8a88f57deb0340e48ac974d17f93ef6a);
+        chart_73a7d70bbc3c484e8bc1508fc614e6dd.setOption(option_73a7d70bbc3c484e8bc1508fc614e6dd);
     </script>
 </body>
 </html>
