--- a/ApiTest/static/css/login.css
+++ b/ApiTest/static/css/login.css
@@ -36,7 +36,7 @@ body {
     position: absolute;
     z-index: 0;
     bottom: 0px;
-    height: 290px;
+    height: 310px;
     width: 100%;
 }
 
@@ -65,3 +65,47 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 50px #009688;
 }
+
+/*钉钉登录*/
+.homeBox {
+    position: fixed;
+    height: 100%;
+}
+
+.login-container {
+    position: absolute;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    background-clip: padding-box;
+    width: 300px;
+    padding: 35px 35px 15px 35px;
+    background: #eaeaea;
+    border: 1px solid #eaeaea;
+    box-shadow: 0 0 25px #cac6c6;
+    z-index: 1000;
+    float: right;
+    right: 4%;
+    top: 25%;
+}
+
+.title {
+    margin: 0px auto 0px auto;
+    text-align: center;
+}
+
+.lun-container {
+    width: 210px;
+    height: 140px;
+    position: relative;
+    font-size: 32px;
+    color: #FFFFFF;
+    text-align: center;
+    line-height: 90px;
+    margin: 200px auto;
+    margin-bottom: 0px;
+    margin-top: 48%;
+    perspective: 1000px;
+    z-index: 1000;
+}
+
