--- a/ApiTest/templates/lgoindingding.html
+++ b/ApiTest/templates/lgoindingding.html
@@ -15,12 +15,12 @@
     <script src="./../static/js/layui/layui.js"></script>
     <script src="http://g.alicdn.com/dingding/dinglogin/0.0.5/ddLogin.js"></script>
 
+
 </head>
 <body class="loginBody">
 <div class="container">
     <div class="content">
         <canvas id="universe"></canvas>
-        <div id="login_container"></div>
 
         <div id="footer">
             <svg id="scene" x="0px" y="0px" width="1600px" height="345px">
@@ -141,6 +141,17 @@
         </div>
     </div>
 </div>
+    <div class="homeBox">
+        <div style="width:32%;margin-left: 30%">
+            <div class="title0">自动化测试平台</div>
+            <div class="title1">项目管理、接口管理、用例管理、测试报告、任务设置</div>
+        </div>
+        <div class="demo-ruleForm login-container">
+            <h1 class="title">钉钉登录</h1>
+            <div id="login_container"></div>
+        </div>
+    </div>
+<div id="login_container"></div>
 <script>
     window.requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
         window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
@@ -285,92 +296,29 @@
         circleCenter = {
             x: width / 2,
             y: height / 2
-        }
+        };
 
         canva.setAttribute('width', width);
         canva.setAttribute('height', height);
     }
 
-    // layui.use(['form', 'layer', 'jquery'], function () {
-    //     var form = layui.form,
-    //         layer = parent.layer === undefined ? layui.layer : top.layer
-    //     $ = layui.jquery;
-
-    //     $(".loginBody .seraph").click(function () {
-    //         layer.msg("这只是做个样式，至于功能，你见过哪个后台能这样登录的？还是老老实实的找管理员去注册吧", {
-    //             time: 5000
-    //         });
-    //     });
-
-    //     //登录按钮
-    //     form.on("submit(login)", function (data) {
-    //         //$(this).text("登录中...").attr("disabled", "disabled").addClass("layui-disabled");
-    //         console.log(data.field);
-    //         $.ajax({
-    //             cache: false,
-    //             url: "/login/",
-    //             dataType: 'text',
-    //             type: 'POST',
-    //             async: true,
-    //             data: {
-    //                 "username": data.field.username,
-    //                 "password": data.field.password,
-    //             },
-    //             success: function (data) {
-    //                 console.log(data);
-    //                 layer.msg(data, {
-    //                     icon: 6,
-    //                     offset: 't',
-    //                     anim: 2,
-    //                     time: 10000,
-    //                 });
-
-    //             },
-    //             error: function (data) {
-    //                 console.log(data);
-    //                 layer.msg("登录失败", {
-    //                     icon: 5,
-    //                     offset: 't',
-    //                     anim: 2,
-    //                 });
-    //             },
-    //         });
-    //         return false;
-    //     });
-
-    //     //表单输入效果
-    //     $(".loginBody .input-item").click(function (e) {
-    //         e.stopPropagation();
-    //         $(this).addClass("layui-input-focus").find(".layui-input").focus();
-    //     })
-    //     $(".loginBody .layui-form-item .layui-input").focus(function () {
-    //         $(this).parent().addClass("layui-input-focus");
-    //     })
-    //     $(".loginBody .layui-form-item .layui-input").blur(function () {
-    //         $(this).parent().removeClass("layui-input-focus");
-    //         if ($(this).val() != '') {
-    //             $(this).parent().addClass("layui-input-active");
-    //         } else {
-    //             $(this).parent().removeClass("layui-input-active");
-    //         }
-    //     })
-    // })
 </script>
 <script>
 
     var url = encodeURIComponent('http://localhost:8000/dingding_login');
     var goto = encodeURIComponent('https://oapi.dingtalk.com/connect/oauth2/sns_authorize?' +
-        'appid=dingoa6if6q5jqpwb0sndx&response_type=code' +
+        'appid=dingoa6if6q5jqpwb0sndx' +
+        '&response_type=code' +
         '&scope=snsapi_login' +
         '&state=STATE' +
-        '&redirect_uri=' + url)
+        '&redirect_uri=' + url);
 
     var obj = DDLogin({
         id: "login_container",//这里需要你在自己的页面定义一个HTML标签并设置id，例如<div id="login_container"></div>或<span id="login_container"></span>
         goto: goto,
         style: "border:none;background-color:#FFFFFF;",
         width: "300",
-        height: "400"
+        height: "300"
     });
 
     var hanndleMessage = function (event) {
