--- a/ApiTest/templates/search.html
+++ b/ApiTest/templates/search.html
@@ -320,7 +320,7 @@
 
 
 <div class="footer">
-    <p class="landIn">The automation test platform is convenient for everyone to use</p>
+    <p class="landIn">The automatic test platform is convenient for everyone to use</p>
 </div>
 
 <!--表格-->
