--- a/ApiTest/templates/menu.html
+++ b/ApiTest/templates/menu.html
@@ -21,10 +21,12 @@
             position: fixed;
             right: 30px;
         }
+
         .treetable {
             height: 100%;
             display: inline-block;
         }
+
         .mytable {
             float: right;
             width: 88%;
@@ -120,6 +122,7 @@
                         var data = obj.data;  //获取当前点击的节点数据
                         console.log(data);
                         layer.msg('状态：' + obj.state + '<br>节点数据：' + JSON.stringify(data.title));
+                        var title = data.title;
                         var tableIns = table.render({
                             elem: '#treetable',
                             url: '/api/v1/menu/table/',
@@ -139,10 +142,12 @@
                                 {title: '操作', toolbar: '#barDemo', width: 100, align: "left"},
                                 {field: 'title', title: '标题值'},
                                 {field: 'nav', title: '标题键'},
-                                {field: 'icon', title: '图标', templet: function (d) {
-                                    console.log(d.icon);
-                                    return '<span>' + d.icon + '</span>';
-                                }},
+                                {
+                                    field: 'icon', title: '图标', templet: function (d) {
+                                        console.log(d.icon);
+                                        return '<span>' + d.icon + '</span>';
+                                    }
+                                },
                                 {field: 'href', title: '链接'},
                                 {field: 'spread', title: '是否展开'},
                             ]]
@@ -196,7 +201,7 @@
                                                         "icon": data.field.icon,
                                                         "href": data.field.href,
                                                         "spread": onoff,//开关状态
-                                                        "nav":data.field.nav,
+                                                        "nav": data.field.nav,
                                                     },
                                                     success: function (data) {
                                                         if (data.code === 1000) {
@@ -270,80 +275,74 @@
                                 case 'add_childmenu':
                                     var res = checkStatus.data;
                                     console.log(res.length);
-                                    if (res.length != 0) {
-                                        var add_childmenu = layer.open({
-                                            //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
-                                            type: 1,
-                                            title: "添加字菜单",
-                                            area: ['40%', ''],
-                                            shade: 0.6,
-                                            skin: "layui-layer-rim",
-                                            content: $("#add_childmenu").html(),
-                                            success: function () {
-                                                layui.use(['form', 'jquery'], function () {
-                                                    var form = layui.form,
-                                                        $ = layui.$;
-                                                    form.val("add_childmenu");
-                                                    var onoff = "";
-                                                    form.on('switch(switchTest)', function (data) {
-                                                        console.log(data.othis);
-                                                        onoff = this.checked ? 'true' : 'false';
-                                                        //layer.msg('开关checked：' + (this.checked ? 'true' : 'false'), {offset: '6px'});
-                                                        console.log(onoff);
-                                                        //layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
-                                                    });
-                                                    form.on('submit(add_childmenu)', function (data) {
-                                                        if (onoff == "") {
-                                                            onoff = "false"
-                                                        }
-                                                        $.ajax({
-                                                            url: "/api/v1/menu/add_childmenu/",
-                                                            type: 'POST',
-                                                            data: {
-                                                                "area": res[0]["area"],
-                                                                "classification": res[0]["classification"],
-                                                                "title": data.field.title,
-                                                                "icon": data.field.icon,
-                                                                "href": data.field.href,
-                                                                "spread": onoff,//开关状态,
-                                                                "nav":data.field["nav"],
-                                                            },
-                                                            success: function (data) {
-                                                                if (data.code === 1000) {
-                                                                    layer.msg(data.msg, {
-                                                                        icon: 6, offset: "t"
-                                                                    })
-                                                                } else {
-                                                                    layer.msg(data.error, {
-                                                                        icon: 5, offset: "t"
-                                                                    })
-                                                                }
-                                                                $(".layui-laypage-btn").click();
-                                                            },
-                                                            error: function () {
-                                                                layer.msg("回调失败", {
-                                                                    icon: 5,
-                                                                    offset: 't'
-                                                                });
-                                                            },
-                                                            complete: function () {
-                                                                layer.close(add_childmenu)
-
-                                                            }
-                                                        });
-                                                        return false;//阻止表单跳转
-                                                    });
-
-
+                                    var add_childmenu = layer.open({
+                                        //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
+                                        type: 1,
+                                        title: "添加字菜单",
+                                        area: ['40%', ''],
+                                        shade: 0.6,
+                                        skin: "layui-layer-rim",
+                                        content: $("#add_childmenu").html(),
+                                        success: function () {
+                                            layui.use(['form', 'jquery'], function () {
+                                                var form = layui.form,
+                                                    $ = layui.$;
+                                                form.val("add_childmenu");
+                                                var onoff = "";
+                                                form.on('switch(switchTest)', function (data) {
+                                                    console.log(data.othis);
+                                                    onoff = this.checked ? 'true' : 'false';
+                                                    //layer.msg('开关checked：' + (this.checked ? 'true' : 'false'), {offset: '6px'});
+                                                    console.log(onoff);
+                                                    //layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
                                                 });
-                                            }
-                                        });
-                                    } else {
-                                        layer.msg('请先勾选CheckBox哦，否则无法发送请求！', {
-                                            offset: '6px',
-                                            icon: 5,
-                                        });
-                                    }
+                                                form.on('submit(add_childmenu)', function (data) {
+                                                    if (onoff == "") {
+                                                        onoff = "false"
+                                                    }
+                                                    console.log(title);
+                                                    $.ajax({
+                                                        url: "/api/v1/menu/add_childmenu/",
+                                                        type: 'POST',
+                                                        data: {
+                                                            "classification": title,
+                                                            "title": data.field.title,
+                                                            "icon": data.field.icon,
+                                                            "href": data.field.href,
+                                                            "spread": onoff,//开关状态,
+                                                            "nav": data.field["nav"],
+                                                        },
+                                                        success: function (data) {
+                                                            if (data.code === 1000) {
+                                                                layer.msg(data.msg, {
+                                                                    icon: 6, offset: "t"
+                                                                })
+                                                            } else {
+                                                                layer.msg(data.error, {
+                                                                    icon: 5, offset: "t"
+                                                                })
+                                                            }
+                                                            $(".layui-laypage-btn").click();
+                                                        },
+                                                        error: function () {
+                                                            layer.msg("回调失败", {
+                                                                icon: 5,
+                                                                offset: 't'
+                                                            });
+                                                        },
+                                                        complete: function () {
+                                                            layer.close(add_childmenu)
+
+                                                        }
+                                                    });
+                                                    return false;//阻止表单跳转
+                                                });
+
+
+                                            });
+                                        }
+                                    });
+
 
                             }
                         });
