--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -748,7 +748,7 @@
 <script>
     // 自定义模块
     layui.config({
-        base: './../static/js/layui/lay/modules/',   // 模块目录
+        base: './../static/layui2.5.5/lay/modules/',   // 模块目录
         version: 'v1.3.28'
     }).extend({             // 模块别名
         soulTable: 'soulTable'
