--- a/ApiTest/templates/link.html
+++ b/ApiTest/templates/link.html
@@ -11,86 +11,22 @@
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="../static/layui2.5.5/css/layui.css">
+    <link rel="stylesheet" href="../static/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/css/btn.css">
+    <link rel="stylesheet" href="../static/css/link.css">
 
     <script src="../static/jquery-3.4.1/jquery-3.4.1.min.js" type="text/javascript"></script>
     <script src="../static/layui2.5.5/layui.js"></script>
     <script type="text/javascript" src="../static/js/linkList.js"></script>
 
-    <style>
-        .layui-laypage a, .layui-laypage span {
-            color: #fff;
-        }
 
-        .layui-table-page .layui-laypage {
-            position: fixed;
-            right: 30px;
-        }
-        .layui-table-tool .layui-btn-container{
-            margin-top: -15px;
-            margin-bottom: -15px;
-        }
-
-        @import url(https://fonts.googleapis.com/css?family=Lato);
-
-        .btn {
-            position: relative;
-            padding: 0.3rem 1rem;
-            font-family: Lato, sans-serif;
-            font-size: 1rem;
-            line-height: 1.5;
-            color: black;
-            text-decoration: none;
-            background-color: white;
-            border: transparent;
-            outline: transparent;
-            cursor: pointer;
-            user-select: none;
-            white-space: nowrap;
-            animation: glow 8s linear infinite;
-        }
-
-        .btn-gradient {
-            color: white;
-            background: linear-gradient(90deg, #00dbde, #fc00ff, #00dbde);
-            background-size: 300%;
-            border-radius: 2em;
-        }
-
-        .btn-gradient::before {
-            position: absolute;
-            content: "";
-            top: -5px;
-            left: -5px;
-            bottom: -5px;
-            right: -5px;
-            z-index: -1;
-            background: inherit;
-            background-size: inherit;
-            border-radius: 4em;
-            opacity: 0;
-            transition: 0.5s;
-        }
-
-        .btn-gradient:hover::before {
-            opacity: 1;
-            filter: blur(20px);
-            animation: glow 8s linear infinite;
-        }
-
-        @keyframes glow {
-            to {
-                background-position: 300%;
-            }
-        }
-    </style>
 </head>
 
-<body class="childrenBody"  style="background-color:lightsteelblue;">
-<!--添加收藏-->
-<div class="layui-row" id="add_link" style="display: none;">
+<body class="childrenBody" style="background-color:lightsteelblue;">
+<!--添加-编辑-收藏-->
+<div class="layui-row" id="add_update_link" style="display: none;">
     <div class="layui-col-md11">
-        <form class="layui-form" lay-filter="add_link">
+        <form class="layui-form" lay-filter="add_update_link">
 
             <div class="layui-form-item" style="margin-top: 20px;">
                 <label class="layui-form-label">网站Logo</label>
@@ -115,7 +51,7 @@
             </div>
             <div class="layui-form-item" style="margin-top: 30px;">
                 <div class="layui-input-block">
-                    <button class="btn btn-primary btn-finger layui-btn"  lay-submit lay-filter="add_link"
+                    <button class="btn btn-primary btn-finger layui-btn"  lay-submit lay-filter="add_update_link"
                             style="float:right;">确定
                     </button>
                 </div>
@@ -124,48 +60,18 @@
         +
     </div>
 </div>
-<!--编辑收藏-->
-<div class="layui-row" id="update_link" style="display: none;">
-    <div class="layui-col-md11">
-        <form class="layui-form" lay-filter="update_link">
 
-            <div class="layui-form-item" style="margin-top: 20px;">
-                <label class="layui-form-label">网站Logo</label>
-                <div class="layui-input-block">
-                    <input type="text" name="logo" required lay-verify="required"
-                           placeholder="请输网站Logo" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">网站名称</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name" required lay-verify="required"
-                           placeholder="请输入网站名称" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">网站地址</label>
-                <div class="layui-input-block">
-                    <input type="text" name="url" required lay-verify="required"
-                           placeholder="请输入网站地址" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item" style="margin-top: 30px;">
-                <div class="layui-input-block">
-                    <button class="btn btn-primary btn-finger layui-btn"  lay-submit lay-filter="update_link"
-                            style="float:right;">确定
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+<!--
 <blockquote class="layui-elem-quote quoteBox">
-    <div>以下列表是本人收藏的一些网站、博客，欢迎补充</div>
+    <div></div>
 </blockquote>
-
-<table id="linkList" lay-filter="linkList"></table>
-
+-->
+<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+    <legend>网站收藏</legend>
+</fieldset>
+<div class="bianju">
+    <table id="linkList" lay-filter="linkList"></table>
+</div>
 
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container">
@@ -177,6 +83,8 @@
     <a class="layui-icon layui-icon-tips"
        style="color:#797979;font-size: 20px;padding:0 2px;vertical-align:middle;font-weight: lighter;"
        lay-event="update_link"></a>
+    <a class="fa fa-trash-o" lay-event="del_link"
+       style="color: #797979;font-size: 20px;padding:0 2px;vertical-align:middle;font-weight: lighter;"></a>
 </script>
 
 </body>
