--- a/ApiTest/templates/testUrl.html
+++ b/ApiTest/templates/testUrl.html
@@ -11,17 +11,80 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<link rel="stylesheet" href="../static/layui2.5.5/css/layui.css">
+    <link rel="stylesheet" href="../static/css/btn.css">
+    <link rel="stylesheet" href="../static/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/css/link.css">
 
+    <script src="../static/jquery-3.4.1/jquery-3.4.1.min.js" type="text/javascript"></script>
     <script src="../static/layui2.5.5/layui.js"></script>
     <script type="text/javascript" src="../static/js/testUrl.js"></script>
 
 </head>
 
-<body class="childrenBody">
-	<blockquote class="layui-elem-quote quoteBox">
-		<div>日常工作测试的网址</div>
-	</blockquote>
-	<table id="linkList" lay-filter="linkList"></table>
+<body class="childrenBody" style="background-color:lightsteelblue;">
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+        <legend>测试网址</legend>
+    </fieldset>
+    <div class="bianju">
+	    <table id="linkList" lay-filter="linkList"></table>
+    </div>
+<!--添加-编辑-收藏-->
+<div class="layui-row" id="add_update_link" style="display: none;">
+    <div class="layui-col-md11">
+        <form class="layui-form" lay-filter="add_update_link">
+
+            <div class="layui-form-item" style="margin-top: 20px;">
+                <label class="layui-form-label">网站Logo</label>
+                <div class="layui-input-block">
+                    <input type="text" name="logo" required lay-verify="required" value="../static/images/amberdata.png"
+                           placeholder="请输网站Logo" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">网站名称</label>
+                <div class="layui-input-block">
+                    <input type="text" name="websites" required lay-verify="required"
+                           placeholder="请输入网站名称" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">网站地址</label>
+                <div class="layui-input-block">
+                    <input type="text" name="url" required lay-verify="required"
+                           placeholder="请输入网站地址" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">api地址</label>
+                <div class="layui-input-block">
+                    <input type="text" name="apidocument" required lay-verify="required"
+                           placeholder="请输入api地址" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item" style="margin-top: 30px;">
+                <div class="layui-input-block">
+                    <button class="btn btn-primary btn-finger layui-btn"  lay-submit lay-filter="add_update_link"
+                            style="float:right;">确定
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script type="text/html" id="toolbarDemo">
+    <div class="layui-btn-container">
+        <button type="button" onclick="add_test_url()" class="btn btn-gradient">添加地址</button>
+    </div>
+</script>
+
+<script type="text/html" id="barDemo">
+    <a class="layui-icon layui-icon-tips"
+       style="color:#797979;font-size: 20px;padding:0 2px;vertical-align:middle;font-weight: lighter;"
+       lay-event="update_test_url"></a>
+    <a class="fa fa-trash-o" lay-event="del_test_url"
+       style="color: #797979;font-size: 20px;padding:0 2px;vertical-align:middle;font-weight: lighter;"></a>
+</script>
 </body>
 
 </html>
