--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -352,10 +352,11 @@
         <div class="layui-col-md11">
 
             <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 20px;">
-                <a href="http://localhost:8089/" style="font-size: 20px;color: #1E9FFF;padding-left: 20px;"
-                   target="_blank">点击前往-->Start new Locust swarm</a>
+                <a href="http://localhost:8089/" style="font-size: 20px;color: #1E9FFF;padding-left: 20px;">
+                    点击前往-->Start new Locust swarm
+                </a>
             </blockquote>
-
+            <!--a标签跳转到话加上target="_blank"-->
             <blockquote class="layui-elem-quote" style="margin-top: 20px;padding-left: 20px;">
                 注意:如果测试结束，请回到此页面关闭8089端口进程
             </blockquote>
