--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -352,7 +352,7 @@
         <div class="layui-col-md11">
 
             <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 20px;">
-                <a href="http://localhost:8089/" style="font-size: 20px;color: #1E9FFF;padding-left: 20px;">
+                <a href="http://localhost:8089/" target="_blank" style="font-size: 20px;color: #1E9FFF;padding-left: 20px;">
                     点击前往-->Start new Locust swarm
                 </a>
             </blockquote>
