--- a/ApiTest/templates/pyechartReport.html
+++ b/ApiTest/templates/pyechartReport.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="2cc96307c5bf41028b20e3e94d03e082" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="6e871840df654815b57a33dcfd5c1c55" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_2cc96307c5bf41028b20e3e94d03e082 = echarts.init(
-            document.getElementById('2cc96307c5bf41028b20e3e94d03e082'), 'white', {renderer: 'canvas'});
-        var option_2cc96307c5bf41028b20e3e94d03e082 = {
+        var chart_6e871840df654815b57a33dcfd5c1c55 = echarts.init(
+            document.getElementById('6e871840df654815b57a33dcfd5c1c55'), 'white', {renderer: 'canvas'});
+        var option_6e871840df654815b57a33dcfd5c1c55 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -60,97 +60,7 @@
                 0,
                 0,
                 0,
-                0.264,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0.251,
-                0.29,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0
+                0.264
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -224,97 +134,7 @@
                 "delete_data_form_config",
                 "get_data_form_config_details",
                 "get_data_form_config_list",
-                "get_department_list",
-                "get_department_folder_by_group_name",
-                "get_department_by_group_name",
-                "create_department",
-                "get_user_list_in_department",
-                "update_department",
-                "delete_department_by_group_name",
-                "get_user_list_by_filter_conditions",
-                "create_user",
-                "get_user_details",
-                "get_user_image_by_photo_url",
-                "get_user_list_by_role_name",
-                "import_user_from_execl",
-                "update_user",
-                "update_user_state_by_id",
-                "user_logout",
-                "user_sso_login",
-                "update_user_state_by_id",
-                "get_retention_policy_list",
-                "create_retention_policy",
-                "update_retention_policy",
-                "delete_retention_policy",
-                "get_applied_retention_policy_list",
-                "get_policy_details_by_name",
-                "get_category_list",
-                "get_data_form_metadata_scheme_list",
-                "get_form_base_info",
-                "get_form_base_info_by_metadata_scheme_id",
-                "get_form_column_config",
-                "get_form_column_config_by_metadata_scheme_id",
-                "get_category_detail",
-                "get_iteration_category_list_by_id",
-                "get_column_list_by_metadata_scheme_id",
-                "get_report_template_type_list",
-                "get_bottom_category_list",
-                "get_standard_code_by_name",
-                "get_excel_headers_by_file",
-                "get_filter_operator_list",
-                "get_system_attribute_list_by_type_name",
-                "get_bread_crumbs_by_id",
-                "get_object_list",
-                "get_object_list_in_department",
-                "get_tree_node_list_by_parent_id",
-                "get_tree_nodes_business_attribute_by_id",
-                "create_data_form",
-                "delete_data_form",
-                "get_data_form_details",
-                "get_data_form_list",
-                "update_data_form",
-                "create_file_plan",
-                "delete_file_plan",
-                "get_file_plan_by_parent_id",
-                "create_common_folder",
-                "get_common_folder_details_by_id",
-                "get_list_by_parentId",
-                "update_common_folder",
-                "delete_resource",
-                "download_file",
-                "download_temp_file",
-                "upload_file",
-                "get_info_by_user_id",
-                "create_category",
-                "delete_category",
-                "get_category_by_file_plan_id",
-                "get_category_details",
-                "get_category_list_by_parent_id",
-                "get_category_list_by_query_type",
-                "get_category_list_by_id",
-                "get_child_nodes_by_parent_node",
-                "create_document",
-                "get_version_list",
-                "get_document_id_by_relative_path_in_record",
-                "get_view_token",
-                "get_document_details",
-                "get_document_list_by_record_id",
-                "update_document_name",
-                "apply_acl",
-                "create_volume",
-                "delete_volume",
-                "get_volume_acl_details",
-                "get_volume_details",
-                "rearrange",
-                "update_volume",
-                "create_record",
-                "update_record",
-                "get_record_details",
-                "delete_record",
-                "get_year_list_by_parentId",
-                "confirm_file_data_range",
-                "rearrange",
-                "file"
+                "get_department_list"
             ]
         }
     ],
@@ -431,7 +251,7 @@
         "zoomLock": false
     }
 };
-        chart_2cc96307c5bf41028b20e3e94d03e082.setOption(option_2cc96307c5bf41028b20e3e94d03e082);
+        chart_6e871840df654815b57a33dcfd5c1c55.setOption(option_6e871840df654815b57a33dcfd5c1c55);
     </script>
 </body>
 </html>
